--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
-{
-  "name": "local-lens-nwa",
-  "version": "1.0.0",
-  "description": "Static site for Local Lens NWA",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.19.2"
+"node_modules/utils-merge": {
+  "version": "1.0.1",
+  "resolved": "https://registry.npmjs.org/utils-merge/-/utils-merge-1.0.1.tgz",
+  "integrity": "sha512-pMZTvIkT1d+TFGvDOqodOclx0QWkkgi6Tdoa8gC8ffGAAqz9pzPTZWAybbsHHoED/ztMtkv/VoYTYyShUn81hA==",
+  "license": "MIT",
+  "engines": {
+    "node": ">= 0.4.0"
+  }
+},
+"node_modules/vary": {
+  "version": "1.1.2",
+  "resolved": "https://registry.npmjs.org/vary/-/vary-1.1.2.tgz",
+  "integrity": "sha512-BNGbWLfd0eUPabhkXUVm0j8uuvREyTh5ovRa/dyow/BqAbZJyC+5fU+IzQOzmAKzYqYRAISoRhdQr3eIZ/PXqg==",
+  "license": "MIT",
+  "engines": {
+    "node": ">= 0.8"
   }
 }
