--- a/package.json
+++ b/package.json
@@ -14,5 +14,17 @@
   "license": "MIT",
   "engines": {
     "node": ">= 0.8"
+{
+  "name": "local-lens-nwa",
+  "version": "1.0.0",
+  "description": "Static site for Local Lens NWA",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "pg": "^8.11.3"
   }
 }
