--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Environment variables for Local Lens NWA
-DATABASE_URL=postgresql://postgres:Iwant2go2ITALY!!@db.basklkmfterjgyrvqthx.supabase.co:5432/postgres
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DBNAME
